Fix letter cropping and max-width

--- a/src/components/PokemonGrid.scss
+++ b/src/components/PokemonGrid.scss
@@ -7,7 +7,7 @@
     //min-width: 55%;
     //width: 55%;
     //margin: 0 auto;  //
-    max-width: 65%;
+    max-width: 1024px; //1300
     height: 100%;
     a {
         text-decoration: none;
